--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Inder&display=swap');
 
+:root {
+  --font-inder: 'Inder', sans-serif;
+}
+
+h1 {
+  @apply font-inder
+}
