--- a/app/globals.css
+++ b/app/globals.css
@@ -10,3 +10,7 @@
 h1 {
   @apply font-inder
 }
+
+.button-1 {
+  @apply bg-secondary px-6 py-3 rounded-md shadow-lg relative hover:border border-secondary active:top-0.5
+}
