--- a/app/globals.css
+++ b/app/globals.css
@@ -12,5 +12,5 @@ h1 {
 }
 
 .button-1 {
-  @apply bg-secondary px-6 py-3 rounded-md shadow-lg relative hover:border border-secondary active:top-0.5
+  @apply bg-secondary px-6 py-3 rounded-md drop-shadow-lg relative hover:border border-secondary active:top-0.5;
 }
